--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -143,6 +143,7 @@
 <!ENTITY Ctr_alt_addonsm	"Správce rozšíření: alternativní vzhled">
 <!ENTITY Ctr_am_nowarning	"Seznam Správce rozšíření: skrývat varování">
 <!ENTITY Ctr_addonversion	"Seznam Správce rozšíření: zobrazit verzi rozšíření">
+<!ENTITY Ctr_xpinstallui	"Add-on manager: old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Tlačítko menu záložek: panel menu vzhledu">
 <!ENTITY Ctr_bmbutnotext	"Tlačítko menu záložek: skrýt návěští na liště záložek">
 <!ENTITY Ctr_skipprintpr	"Tlačítko tisku: přeskočit náhled tisku">
