--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -143,6 +143,7 @@
 <!ENTITY Ctr_alt_addonsm	"Add-on Manager: alternative Darstellung">
 <!ENTITY Ctr_am_nowarning	"Add-on 'Übersicht': Warnungen ausblenden">
 <!ENTITY Ctr_addonversion	"Add-on 'Übersicht': Versionsnummer von Add-ons anzeigen">
+<!ENTITY Ctr_xpinstallui	"Add-on Manager: altes Add-on Installationsfenster (about:config Einstellung)">
 <!ENTITY Ctr_bmbutpanelm	"Lesezeichen-Menüschaltfläche: 'Panel-Aufklappmenü'-Darstellung">
 <!ENTITY Ctr_bmbutnotext	"Lesezeichen-Menüschaltfläche: Text auf der Lesezeichenleiste verstecken">
 <!ENTITY Ctr_skipprintpr	"Drucken-Schaltfläche: Druckvorschau überspringen">
