--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -143,6 +143,7 @@
 <!ENTITY Ctr_alt_addonsm	"Add-on manager: alternative appearance">
 <!ENTITY Ctr_am_nowarning	"Add-on managers add-on lists: hide warnings">
 <!ENTITY Ctr_addonversion	"Add-on managers add-on lists: show add-on version">
+<!ENTITY Ctr_xpinstallui	"Add-on manager: old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Μενού κουμπιού-μενού σελιδοδεικτών: εμφάνιση μενού πίνακα">
 <!ENTITY Ctr_bmbutnotext	"Κουμπί-μενού σελιδοδεικτών: απόκρυψη ετικέτας στην εργαλειοθήκη σελιδοδεικτών">
 <!ENTITY Ctr_skipprintpr	"Κουμπί «Εκτύπωση»: παράκαμψη προεπισκόπησης εκτύπωσης">
