--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -143,6 +143,7 @@
 <!ENTITY Ctr_alt_addonsm	"Add-on manager: alternative appearance">
 <!ENTITY Ctr_am_nowarning	"Add-on managers add-on lists: hide warnings">
 <!ENTITY Ctr_addonversion	"Add-on managers add-on lists: show add-on version">
+<!ENTITY Ctr_xpinstallui	"Add-on manager: old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Bouton Marque-pages : apparence Panneau menu">
 <!ENTITY Ctr_bmbutnotext	"Bouton Marque-pages : cacher 'Marque-pages' sur la barre personnelle">
 <!ENTITY Ctr_skipprintpr	"Bouton imprimer : enlever l'aperçu avant impression">
