--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -143,6 +143,7 @@
 <!ENTITY Ctr_alt_addonsm	"Menedżer dodatków: wygląd alternatywny">
 <!ENTITY Ctr_am_nowarning	"Listy dodatków menedżera dodatków: ukryj ostrzeżenia">
 <!ENTITY Ctr_addonversion	"Listy dodatków menedżera dodatków: wyświetl wersję dodatku">
+<!ENTITY Ctr_xpinstallui	"Add-on manager: old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Przycisk menu zakładek: wygląd menu panelu">
 <!ENTITY Ctr_bmbutnotext	"Przycisk menu zakładek: ukryj etykietę na pasku zakładek">
 <!ENTITY Ctr_skipprintpr	"Przycisk drukowania: pomiń podgląd wydruku">
