--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -143,6 +143,7 @@
 <!ENTITY Ctr_alt_addonsm	"Add-on manager: alternative appearance">
 <!ENTITY Ctr_am_nowarning	"Add-on managers add-on lists: hide warnings">
 <!ENTITY Ctr_addonversion	"Tilføjelseshåndteringens liste med tilføjelser: vis tilføjelsesversion">
+<!ENTITY Ctr_xpinstallui	"Add-on manager: old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Bogmærke-menuknap: panelmenu udseende">
 <!ENTITY Ctr_bmbutnotext	"Bogmærke-menuknap: skjul etiket på bogmærkelinje">
 <!ENTITY Ctr_skipprintpr	"Udskriv-knap: Spring vis udskrift over">
